First labels created

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <canvas width="600" height="600">
 
         </canvas>
+        <div class="labels">
+            <p>Level:<span class="level-qty"></span></p>
+            <p>Lives:<span class="lives-qty"></span></p>
+            <p>Score:<span class="score-qty"></span></p>
+            <p>Best Score:<span class="best-score-qty"></span></p>
+        </div>
     </div>
 
     <script type="module" src="src/index.js"></script>
