Game update method refactored

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p>Lives:<span class="lives-qty"></span></p>
             <p>Score:<span class="score-qty"></span></p>
             <p>Best Score:<span class="best-score-qty"></span></p>
+            <p>Enemies Left:<span class="enemies-left-qty"></span></p>
         </div>
     </div>
 
