Levels, bestscore and enemy spawn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
             <p>Best Score:<span class="best-score-qty"></span></p>
             <p>Enemies Left:<span class="enemies-left-qty"></span></p>
         </div>
+        <div class="welcome-menu-info-panel">
+            <h1>Tanks!</h1>
+            <p>Press Enter to start</p>
+        </div>
+        <div class="level-info-panel">
+            <p>Level&nbsp;<span class="info-panel-level-qty"></span></p>
+        </div>
+        <div class="paused-info-panel">
+            <p>Paused</p>
+            <p>Press esc to resume</p>
+        </div>
+        <div class="game-over-info-panel">
+            <p>Game Over</p>
+            <p class="score">Score:<span class="game-over-score-qty"></span></p>
+            <p class="new-best-score">
+                New Best Score!<br /><span class="new-best-score-qty"></span>
+            </p>
+            <p>Press<br />Enter<br />to restart</p>
+        </div>
     </div>
 
     <script type="module" src="src/index.js"></script>
