Missiles fix, favicon and welcome slug

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="tanks.css" />
+    <link rel="icon" type="image/png" href="/assets/images/slug.png" />
     <title>Tanks</title>
 </head>
 
@@ -23,6 +24,7 @@
         </div>
         <div class="welcome-menu-info-panel">
             <h1>Tanks!</h1>
+            <img src="assets/images/slug.png">
             <p>Press Enter to start</p>
         </div>
         <div class="level-info-panel">
